<resources>
    <string name="app_name">Simon</string>
    <string name="red_button_name">Red</string>
    <string name="green_button_name">Green</string>
    <string name="yellow_button_name">Yellow</string>
    <string name="blue_button_name">Blue</string>
    <string name="start_button_name">Start</string>
    <string name="high_score">High Score</string>
    <string name="current_score">Current Score</string>
    <string name="score_text">Current Score: %1d</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="select">Select Difficulty</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>
</resources>
